add theme SB Admin

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -5,9 +5,7 @@
 @import '~@fortawesome/fontawesome-free/scss/solid';
 @import '~@fortawesome/fontawesome-free/scss/brands';
 
-/*@import "../theme/scss/sb-admin";*/
-
-
+@import "../theme/scss/sb-admin";
 
 $acceVerde: #84a640;
 $acceAzul: #396696;
